<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.ActivityLogin">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_background"
        android:layout_alignParentLeft="true" />





    <com.tuyenmonkey.mkloader.MKLoader
        android:id="@+id/proprogressview"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        app:mk_color="@color/colorWhite"
        app:mk_type="FishSpinner" />


    <emerge.project.onmeal.ui.fonts.RobotoMedium
        android:id="@+id/robotoMedium2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/singup_activity_title"
        android:textColor="@color/colorTextWhite"
        android:textSize="20sp" />


    <emerge.project.onmeal.ui.fonts.RobotoLight
        android:id="@+id/robotoLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_name"
        android:layout_alignStart="@+id/robotoMedium2"
        android:text="Full Name"
        android:textColor="@color/colorTextWhite"
        android:textSize="12sp"
        android:layout_alignLeft="@+id/robotoMedium2" />

    <emerge.project.onmeal.ui.fonts.RobotoLightEditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/divider5"
        android:layout_centerHorizontal="true"
        android:background="@color/edittext_background"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/singup_edittext_user_name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextAsh"
        android:textSize="18sp" />


    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/editText_email"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite" />


    <emerge.project.onmeal.ui.fonts.RobotoLightEditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/divider4"
        android:layout_centerHorizontal="true"
        android:background="@color/edittext_background"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/singup_edittext_user_email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextAsh"
        android:textSize="18sp" />


    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/editText_phone"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite" />


    <emerge.project.onmeal.ui.fonts.RobotoLightEditText
        android:id="@+id/editText_phone"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/divider3"
        android:layout_centerHorizontal="true"
        android:background="@color/edittext_background"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/singup_edittext_user_phonenumber_hint"
        android:inputType="phone"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextAsh"
        android:textSize="18sp" />



    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/editText_password"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite" />


    <emerge.project.onmeal.ui.fonts.RobotoLightEditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/divider2"
        android:layout_centerHorizontal="true"
        android:background="@color/edittext_background"
        android:ems="10"
        android:hint="@string/singup_edittext_user_password_hint"
        android:inputType="textPassword"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextAsh"
        android:textSize="18sp" />



    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/editText_password_confrim"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorWhite" />




    <emerge.project.onmeal.ui.fonts.RobotoLightEditText
        android:id="@+id/editText_password_confrim"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/divider"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/edittext_background"
        android:ems="10"
        android:hint="@string/singup_edittext_user_password_confrim_hint"
        android:inputType="textPassword"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextAsh"
        android:textSize="18sp"
        android:layout_alignParentLeft="true" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/button_singin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorWhite" />

    <RelativeLayout
        android:id="@+id/button_singin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_next" />
    </RelativeLayout>


</RelativeLayout>