<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/constraintlayout_main_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_background"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="30dp"
        android:text="@string/fragment_intro_stepthree_content"
        android:textColor="@color/colorTextWhite"
        android:textSize="25sp" />

    <emerge.project.onmeal.ui.fonts.RobotoRegular
        android:id="@+id/textView4"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativelayout2"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="45dp"
        android:lineSpacingExtra="9sp"
        android:text="@string/fragment_intro_stepthree_content_sub"
        android:textColor="@color/colorTextWhite"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/relativelayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"

        android:layout_alignParentRight="true">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_next" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textview1"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/relativelayout1"
            android:layout_toLeftOf="@+id/relativelayout1">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_shape_white"
                android:layout_centerHorizontal="true">

                <emerge.project.onmeal.ui.fonts.RobotoMedium
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="01"
                    android:textColor="@color/colorTextAsh"
                    android:textSize="22sp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/relativelayout1"
            android:layout_toRightOf="@+id/relativelayout1">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_shape_red"
                android:layout_centerHorizontal="true">

                <emerge.project.onmeal.ui.fonts.RobotoMedium
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="03"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="22sp" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout1"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/circle_shape_white">

            <emerge.project.onmeal.ui.fonts.RobotoMedium
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="02"
                android:textColor="@color/colorTextAsh"
                android:textSize="22sp" />

        </RelativeLayout>
    </RelativeLayout>


    <emerge.project.onmeal.ui.fonts.RobotoMedium
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/fragment_intro_stepone_easystep"
        android:textColor="@color/colorTextWhite"
        android:textSize="17sp" />

</RelativeLayout>